:hammer: Fix position bug, other math errors and off screen scroll back

--- a/src/components/enquire-modal/enquire-modal.css
+++ b/src/components/enquire-modal/enquire-modal.css
@@ -56,7 +56,7 @@
 
 .enquire-modal {
   &__modal {
-    @apply absolute top-0 bottom-0 left-0 right-0 z-50 h-[300vh];
+    @apply fixed top-0 bottom-0 left-0 right-0 z-50;
 
     opacity: 0;
     visibility: hidden;
